samples/errors/notarray.our
int a;

main()
{
a[2] = 3;
}

/*
Identifier 'a' is not array.  Line: 5
*/